cluster/apps/graylog/geoipupdate.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: geoipupdate-deployment
  namespace: graylog
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: geoipupdate
  template:
    metadata:
      labels:
        app: geoipupdate
    spec:
      containers:
        - name: geoipupdate
          image: maxmindinc/geoipupdate:v4.10.0
          volumeMounts:
            - name: data
              mountPath: /usr/share/GeoIP
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: geoipupdate-data-pvc
