cluster/apps/graylog/mongodb.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  namespace: graylog
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:5.0.17
          ports:
            - containerPort: 27017
          livenessProbe:
            exec:
              command:
                - mongo
                - --disableImplicitSessions
                - --eval
                - "db.adminCommand('ping')"
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 6
          readinessProbe:
            exec:
              command:
                - mongo
                - --disableImplicitSessions
                - --eval
                - "db.adminCommand('ping')"
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 6
          volumeMounts:
            - name: data
              mountPath: /data/db
            - name: data-configdb
              mountPath: /data/configdb
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: mongodb-data-pvc
        - name: data-configdb
          persistentVolumeClaim:
            claimName: mongodb-data-configdb-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: graylog
spec:
  # Headless service
  clusterIP: None
  ports:
    - name: http
      targetPort: 27017
      port: 27017
      protocol: TCP
  selector:
    app: mongodb
