cluster/apps/graylog/graylog.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: graylog-deployment
  namespace: graylog
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: graylog
  template:
    metadata:
      labels:
        app: graylog
    spec:
      containers:
        - name: graylog
          image: graylog/graylog:5.0.6
          ports:
            - containerPort: 9000
          volumeMounts:
            - name: data
              mountPath: /usr/share/graylog/data
            - name: geoipupdate-data
              mountPath: /usr/share/GeoIP
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: graylog-data-pvc
        - name: geoipupdate-data
          persistentVolumeClaim:
            claimName: geoipupdate-data-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: graylog-service
  namespace: graylog
spec:
  type: ClusterIP
  ports:
    - name: http
      targetPort: 9000
      port: 9000
      protocol: TCP
  selector:
    app: graylog
---
apiVersion: v1
kind: Service
metadata:
  name: graylog-service-udp
  namespace: graylog
spec:
  type: LoadBalancer
  ports:
    - name: pfsense
      targetPort: 8515
      port: 8515
      protocol: UDP
  selector:
    app: graylog
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: graylog-ingress
  namespace: graylog
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: graylog.${SECRET_INTERNAL_DOMAIN_NAME}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: graylog-service
                port:
                  number: 9000
  tls:
    - hosts:
        - graylog.${SECRET_INTERNAL_DOMAIN_NAME}
      secretName: graylog-tls
